--- a/PersonManagementTool/PersonManagementTool/PersonManagementTool.csproj
+++ b/PersonManagementTool/PersonManagementTool/PersonManagementTool.csproj
@@ -88,6 +88,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="RegionNames.cs" />
     <Compile Include="ViewModels\IPersonSelectionViewModel.cs" />
     <Compile Include="ViewModels\PersonSelectionViewModel.cs" />
     <Compile Include="Views\PersonSelectionView.xaml.cs">
