--- a/PersonManagementTool/PersonManagementTool/PersonManagementTool.csproj
+++ b/PersonManagementTool/PersonManagementTool/PersonManagementTool.csproj
@@ -98,25 +98,27 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Contracts\IApplicationCommands.cs" />
     <Compile Include="Contracts\PersonSelectionEvent.cs" />
     <Compile Include="Converter\NullToVisibilityConverter.cs" />
     <Compile Include="Data\PersonContext.cs" />
     <Compile Include="Data\Repository.cs" />
+    <Compile Include="Infrastructure\ApplicationCommands.cs" />
     <Compile Include="RegionNames.cs" />
     <Compile Include="ViewModels\IPersonDetailsViewModel.cs" />
     <Compile Include="ViewModels\IPersonSelectionViewModel.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\PersonDetailsViewModel.cs" />
     <Compile Include="ViewModels\PersonSelectionViewModel.cs" />
+    <Compile Include="Views\MainView.xaml.cs">
+      <DependentUpon>MainView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\PersonDetailsView.xaml.cs">
       <DependentUpon>PersonDetailsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PersonSelectionView.xaml.cs">
       <DependentUpon>PersonSelectionView.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -124,10 +126,10 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Contracts\IPersonRepository.cs" />
     <Compile Include="Contracts\Person.cs" />
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
+    <Page Include="Views\MainView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\PersonDetailsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
