--- a/PersonManagementTool/PersonManagementTool/PersonManagementTool.csproj
+++ b/PersonManagementTool/PersonManagementTool/PersonManagementTool.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Data\PersonContext.cs" />
     <Compile Include="Data\Repository.cs" />
     <Compile Include="Infrastructure\ApplicationCommands.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="RegionNames.cs" />
     <Compile Include="ViewModels\IPersonDetailsViewModel.cs" />
     <Compile Include="ViewModels\IPersonSelectionViewModel.cs" />
@@ -167,7 +168,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Todos.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
