--- a/PersonManagementTool/PersonManagementTool.Specs/PersonManagementTool.Specs.csproj
+++ b/PersonManagementTool/PersonManagementTool.Specs/PersonManagementTool.Specs.csproj
@@ -87,8 +87,11 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Converter\NullToVisibilityConverterTests.cs" />
+    <Compile Include="PersonDetails\WhenPersonHasValidDataForEachProperty.cs" />
     <Compile Include="PersonDetails\WhenPersonWithoutAnyDataIsShown.cs" />
     <Compile Include="PersonDetails\WhenUserWantsToAddANewPerson.cs" />
+    <Compile Include="PersonDetails\WhenValidDataShallBeSaved.cs" />
+    <Compile Include="PersonSelection\WhenPersonDataHasChanged.cs" />
     <Compile Include="Preconditions\PersonsAreAvailable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PersonSelection\WhenApplicationIsInitialized.cs" />
