--- a/PersonManagementTool/PersonManagementTool/PersonManagementTool.csproj
+++ b/PersonManagementTool/PersonManagementTool/PersonManagementTool.csproj
@@ -99,6 +99,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Contracts\IApplicationCommands.cs" />
+    <Compile Include="Contracts\PersonDataChangedEvent.cs" />
     <Compile Include="Contracts\PersonSelectionEvent.cs" />
     <Compile Include="Converter\NullToVisibilityConverter.cs" />
     <Compile Include="Data\PersonContext.cs" />
